--- a/app.json
+++ b/app.json
@@ -41,7 +41,7 @@
       "required": false
     },
     "DEF_THUMB_NAIL_VID_S": {
-      "description": "default thumbnail link to be used in the videos if youtube-dl is unable to find a thumbnail. Get a link for your image from @TGraphHEXbot",
+      "description": "default thumbnail link to be used in the videos if youtube-dl is unable to find a thumbnail.",
       "value": "",
       "required": false
     },
